--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="app" />
-    <script src="dist/app.js" type="text/javascript"></script>
+    <script src="app.js" type="text/javascript"></script>
 </body>
 
 </html>
