updated app structure

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
-    <title>react</title>
+    <title>bilo.io</title>
 </head>
 
 <body>
