updated some stuff

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.google.com/specimen/Didact+Gothic" />
     <title>bilo.io</title>
 </head>
 
