--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,16 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://s3.amazonaws.com/icomoon.io/114779/Socicon/style.css?rd5re8">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand" />
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand" /> 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=OpenSans" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.google.com/specimen/Didact+Gothic" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.google.com/specimen/Didact+Gothic" /> -->
     <title>bilo.io</title>
 </head>
 
 <body>
     <div id="app" />
-    <script src="app.js" type="text/javascript"></script>
 </body>
 
 </html>
