--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://s3.amazonaws.com/icomoon.io/114779/Socicon/style.css?rd5re8">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand" />
-     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=OpenSans" />
+     <!-- <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=OpenSans" /> -->
     <link rel="stylesheet" type="text/css" href="https://fonts.google.com/specimen/Didact+Gothic" /> 
     <title>bilo.io</title>
 </head>
