--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,12 @@
+
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://s3.amazonaws.com/icomoon.io/114779/Socicon/style.css?rd5re8">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand" />
-     <!-- <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=OpenSans" /> -->
-    <link rel="stylesheet" type="text/css" href="https://fonts.google.com/specimen/Didact+Gothic" /> 
-    <title>bilo.io</title>
-</head>
-
-<body>
-    <div id="app" />
-</body>
-
+    <head>
+        <title>React App</title>
+        <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico"/>
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand" />
+    </head>
+    <body>
+        <div id="root" />
+    </body>
 </html>
