--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>React App</title>
+        <title>bilo.bio</title>
         <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico"/>
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand" />
     </head>
