--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <title>bilo.bio</title>
+        <script src="https://use.fontawesome.com/eabd2c0e70.js"></script>
         <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico"/>
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand" />
     </head>
