--- a/browser.html
+++ b/browser.html
@@ -1,29 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Browser</title>
 
-    </head>
+<head>
+    <title>Browser</title>
+</head>
+
 <body>
+    <iframe 
+        src="http://127.0.0.1:8080/browser"
+        style="position: absolute; top: 0em; left: 0em; height: 100%; width: 100%; border: none"
+        frameborder="0" allowfullscreen></iframe>
+</body>
 
-<!-- <iframe width="420" height="315" src="https://www.youtube.com/embed/A6XUVjK9W4o" frameborder="0" allowfullscreen></iframe> -->
-<!-- <input style="position: absolute; top: 0; height: 2em; width: 100%;" type="text" onchange="Call()" /> -->
-<!-- <label style="position: absolute; top: 3em;" id="my-label">My Label</label> -->
-<iframe style="position: absolute; top: 0em; left: 0em; height: 100%; width: 100%; border: none" src="http://127.0.0.1:8080" frameborder="0" allowfullscreen></iframe>
-
-<!-- <input id="txt_Search" type="text" onchange="Call()" /> -->
-<script>
-function Call()
-{
-    //  alert("Search suggestions can come here!!");
-     document.getElementById("my-label").innerHTML = "dude";
-}
-
-</script>
-<!-- <script>
-        function Call() {
-            document.getElementById("my-label").innerHTML = "dude";
-        }    
-        </script>
-</body> -->
 </html>
